copy jasons stuff

--- a/app/views/about/index.html.haml
+++ b/app/views/about/index.html.haml
@@ -79,24 +79,24 @@
 
     <table>  
     <tr><td class="nowrap">
-    <img src="http://chart.apis.google.com/chart?cht=bvs&amp;chs=100x125&amp;chd=t:2,5,60&amp;chds=0,60&amp;chxt=x&amp;chco=4d89f9&amp;chl=git|hg|bzr&amp;chtt=Init" alt="init benchmarks" />
+    <img src="http://chart.apis.google.com/chart?cht=bvs&amp;chs=100x125&amp;chd=t:2,5,60&amp;chds=0,60&amp;chxt=x&amp;chco=009099&amp;chl=git|hg|bzr&amp;chf=bg,s,fcfcfa&amp;chtt=Init" alt="init benchmarks" />
 
-    <img src="http://chart.apis.google.com/chart?cht=bvs&amp;chs=100x125&amp;chd=t:85,3,23&amp;chds=0,100&amp;chxt=x&amp;chco=4d89f9&amp;chl=git|hg|bzr&amp;chtt=Add" alt="add benchmarks" />
+    <img src="http://chart.apis.google.com/chart?cht=bvs&amp;chs=100x125&amp;chd=t:85,3,23&amp;chds=0,100&amp;chxt=x&amp;chco=009099&amp;chl=git|hg|bzr&amp;chf=bg,s,fcfcfa&amp;chtt=Add" alt="add benchmarks" />
 
-    <img src="http://chart.apis.google.com/chart?cht=bvs&amp;chs=100x125&amp;chd=t:45,194,1474&amp;chds=0,1474&amp;chxt=x&amp;chco=4d89f9&amp;chl=git|hg|bzr&amp;chtt=Status" alt="status benchmarks" />
+    <img src="http://chart.apis.google.com/chart?cht=bvs&amp;chs=100x125&amp;chd=t:45,194,1474&amp;chds=0,1474&amp;chxt=x&amp;chco=009099&amp;chl=git|hg|bzr&amp;chf=bg,s,fcfcfa&amp;chtt=Status" alt="status benchmarks" />
 
-    <img src="http://chart.apis.google.com/chart?cht=bvs&amp;chs=100x125&amp;chd=t:5,21,142&amp;chds=0,142&amp;chxt=x&amp;chco=4d89f9&amp;chl=git|hg|bzr&amp;chtt=Diff" alt="diff benchmarks" />
+    <img src="http://chart.apis.google.com/chart?cht=bvs&amp;chs=100x125&amp;chd=t:5,21,142&amp;chds=0,142&amp;chxt=x&amp;chco=009099&amp;chl=git|hg|bzr&amp;chf=bg,s,fcfcfa&amp;chtt=Diff" alt="diff benchmarks" />
     </td><td rowspan="2">
-    <img src="http://chart.apis.google.com/chart?cht=bvg&amp;chs=190x275&amp;chd=t:1,123,390|11,946,820&amp;chds=0,1210&amp;chxt=x&amp;chco=4d89f9,c6d9fd&amp;chl=git|hg|bzr&amp;chtt=Branching" alt="branching benchmarks" />
+    <img src="http://chart.apis.google.com/chart?cht=bvg&amp;chs=190x275&amp;chd=t:1,123,390|11,946,820&amp;chds=0,1210&amp;chxt=x&amp;chco=009099,7fc7cc&amp;chl=git|hg|bzr&amp;chf=bg,s,fcfcfa&amp;chtt=Branching" alt="branching benchmarks" />
     </td></tr>
     <tr><td class="nowrap">
-    <img src="http://chart.apis.google.com/chart?cht=bvs&amp;chs=100x125&amp;chd=t:5,120,189&amp;chds=0,230&amp;chxt=x&amp;chco=4d89f9&amp;chl=git|hg|bzr&amp;chtt=Tag" alt="tag benchmarks" />
+    <img src="http://chart.apis.google.com/chart?cht=bvs&amp;chs=100x125&amp;chd=t:5,120,189&amp;chds=0,230&amp;chxt=x&amp;chco=009099&amp;chl=git|hg|bzr&amp;chf=bg,s,fcfcfa&amp;chtt=Tag" alt="tag benchmarks" />
 
-    <img src="http://chart.apis.google.com/chart?cht=bvs&amp;chs=100x125&amp;chd=t:7,26,90&amp;chds=0,90&amp;chxt=x&amp;chco=4d89f9&amp;chl=git|hg|bzr&amp;chtt=Log" alt="log benchmarks" />
+    <img src="http://chart.apis.google.com/chart?cht=bvs&amp;chs=100x125&amp;chd=t:7,26,90&amp;chds=0,90&amp;chxt=x&amp;chco=009099&amp;chl=git|hg|bzr&amp;chf=bg,s,fcfcfa&amp;chtt=Log" alt="log benchmarks" />
 
-    <img src="http://chart.apis.google.com/chart?cht=bvs&amp;chs=100x125&amp;chd=t:124,125,230&amp;chds=0,230&amp;chxt=x&amp;chco=4d89f9&amp;chl=git|hg|bzr&amp;chtt=Commit+(Lg)" alt="large commit benchmarks" />
+    <img src="http://chart.apis.google.com/chart?cht=bvs&amp;chs=100x125&amp;chd=t:124,125,230&amp;chds=0,230&amp;chxt=x&amp;chco=009099&amp;chl=git|hg|bzr&amp;chf=bg,s,fcfcfa&amp;chtt=Commit+(Lg)" alt="large commit benchmarks" />
 
-    <img src="http://chart.apis.google.com/chart?cht=bvs&amp;chs=100x125&amp;chd=t:8,51,113&amp;chds=0,113&amp;chxt=x&amp;chco=4d89f9&amp;chl=git|hg|bzr&amp;chtt=Commit+(Sm)" alt="small commit benchmarks" />
+    <img src="http://chart.apis.google.com/chart?cht=bvs&amp;chs=100x125&amp;chd=t:8,51,113&amp;chds=0,113&amp;chxt=x&amp;chco=009099&amp;chl=git|hg|bzr&amp;chf=bg,s,fcfcfa&amp;chtt=Commit+(Sm)" alt="small commit benchmarks" />
     </td></tr>
     </table>
 
@@ -212,7 +212,7 @@
 
     <table>
     <tr><td>
-    <img src="http://chart.apis.google.com/chart?cht=bvs&amp;chs=200x150&amp;chd=t:120,144,311,64&amp;chds=0,320&amp;chco=4d89f9&amp;chl=git|hg|bzr|svn&amp;chtt=Clone" alt="cloning benchmarks" />
+    <img src="http://chart.apis.google.com/chart?cht=bvs&amp;chs=200x150&amp;chd=t:120,144,311,64&amp;chds=0,320&amp;chco=009099&amp;chl=git|hg|bzr|svn&amp;chf=bg,s,fcfcfa&amp;chtt=Clone" alt="cloning benchmarks" />
     </td><td style="width: 80%">
     <table width="100%" class="data">
     <tr>
