--- a/app/views/layouts/layout.html.haml
+++ b/app/views/layouts/layout.html.haml
@@ -12,7 +12,7 @@
     :javascript
       try{Typekit.load();}catch(e){}
     
-  %body{:id => @page}
+  %body{:id => @section}
     %div.inner
       = partial 'shared/header'
 
@@ -20,18 +20,10 @@
       %div#masthead
         %div.inner
           %p
-            Git is a <strong>free</strong> & <strong>open source, distributed version control system</strong> designed to handle everything from small to very large projects with speed and efficiency.
+            Git is a <a href="/about/free-and-open-sourced">free and open source</a> distributed version control system designed to handle everything from small to very large projects with speed and efficiency.
 
           %p
-            Git is <a href="#">easy to learn</a>,
-            has <a href="#">lightning fast performance</a>
-            and a <a href="#">tiny footprint</a>.
-            It outclasses source control tools like 
-            Subversion, CVS, Perforce, ClearCase
-            and Team Foundation Server with features like
-            <a href="#">cheap local branching</a>,
-            <a href="#">distributed workflows</a>,
-            and a convenient <a href="#">staging area</a>.
+            Git is <a href="/documentation">easy to learn</a> and has a <a href="/about/small-and-fast">tiny footprint with lightening fast performance</a>. It outclasses SCM tools like Subversion, CVS, Perforce, and Team Foundation Server with features like <a href="/about/branching-and-merging">cheap local branching</a>, convenient <a href="/about/staging-area">staging areas</a>, and <a href="/about/multiple-workflows">multiple workflows</a>.
 
           <img class="illustration" src="images/branching-illustration.png" />
 
