--- a/app/assets/stylesheets/book.css.scss
+++ b/app/assets/stylesheets/book.css.scss
@@ -1,8 +1,116 @@
+#book-container {
+  position: relative;
+  @extend .callout;
+  background-color: transparent ! important;
+  border: solid 1px lighten($base-border-color, 10%);
+  padding-top: 20px ! important;
+  padding-bottom: 20px ! important;
+}
+#book-intro {
+  position: absolute;
+  top: 40px;
+  left: 50px;
+  width: 200px;
+  font-size: 13px;
+  text-align: center;
+  p {
+    padding-bottom: 20px;
+  }
+  img.creative-commons {
+    display: block;
+    margin: 10px auto;
+  }
+  .license {
+    font-size: 11px;
+    line-height: 1.3;
+    color: $light-font-color;
+  }
+  a#open-book {
+    font-weight: bold;
+    display: block;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+}
+#flippy-book {
+  margin: 0 auto;
+  width: 601px;
+  height: 402px;
+  position: relative;
+  background: transparent url(/images/bg/flippy-book.png) 0px 0 no-repeat;
+  @include perspective(1500);
+}
+#flippy-book #book-cover {
+  width: 298px;
+  height: 398px;
+  position: absolute;
+  top: 0;
+  right: 6px;    
+  z-index: 50;
+  @include transform-style(preserve-3d);
+  @include transition-duration(1.2s);
+}
+#flippy-book #book-cover.open {
+  @include transform-origin(-1px, 0);
+  @include rotateY(-180deg);
+}
+#flippy-book #book-cover.close {
+  @include transform-origin(0, 0);
+}
+#flippy-book #book-cover-outside {
+  width: 298px;
+  height: 398px;
+  color: black;
+  background: #000102 url(/images/pro-git-298x398.jpg) 0 0 no-repeat;
+  z-index: 20;
+  text-indent: -9999px;
+  cursor: pointer;
+}
+#flippy-book #book-cover-inside {
+  width: 298px;
+  height: 398px;    
+  right: 4px;
+  @include rotateY(180deg);
+  z-index: 10;
+  background: #fff url(/images/bg/flippy-book-inside-cover.png) 0 0 no-repeat;
+}
+#flippy-book .face {
+  position: absolute;
+  @include backface-visibility(hidden);
+}
+
+#flippy-book #book-inside-page {
+  position: absolute;
+  top: 0;
+  right: 6px;
+  z-index: 1;
+  width: 298px;
+  height: 398px;
+}
+
+#flippy-book span.header {
+  display: block;
+  text-align: center;
+  color: $light-font-color;
+  font-size: 12px;
+  margin-top: 8px;
+}
+
+#about-book {
+  @include inline-block;
+  text-indent: 85px;
+  text-align: center;
+  font-size: 12px;
+  color: $light-font-color;
+  padding-left: 22px;
+  background: transparent url(/images/icons/info.png) 85px 0 no-repeat;
+}
+
 ol.book-toc {
-  list-style: none; 
-  margin-left: 0;
+  @extend .unstyled;
+  margin: 30px 36px;
   li.chapter {
-    margin-bottom: 1em;
+    margin-bottom: 0.6em;
   }
   ol {
     list-style: none; 
