--- a/app/views/doc/index.html.haml
+++ b/app/views/doc/index.html.haml
@@ -4,7 +4,7 @@
 - content_for :sidebar do
   %div.callout
     %p
-      The entire <strong><a href="#">Pro Git book</a></strong> written by Scott Chacon is available to <a href="#">read online for free</a>. Dead tree versions are available on <a href="#">Amazon.com</a>.
+      The entire <strong><a href="/book">Pro Git book</a></strong> written by Scott Chacon is available to <a href="#">read online for free</a>. Dead tree versions are available on <a href="#">Amazon.com</a>.
 
 %div#main
   %h1 Documentation 
@@ -12,15 +12,15 @@
   %h2 Reference
 
   %div.callout.ref-manual
-    %h3= link_to "Reference Manual"
+    %h3= link_to "Reference Manual", "/ref"
     %p
       The official and comprehensive <strong>man pages</strong> that are included in the Git package itself.
 
   %p.quickref
     Quick reference guides: 
-    =link_to "DZone RefCard"
+    =link_to "Salesforce Cheat Sheet", "https://na1.salesforce.com/help/doc/en/salesforce_git_developer_cheatsheet.pdf"
     %small.light (PDF) &nbsp;|&nbsp;
-    =link_to "Visual Git Cheat Sheet"
+    =link_to "Visual Git Cheat Sheet", "http://ndpsoftware.com/git-cheatsheet.html"
     %small.light (SVG | PNG) 
 
   %h2 Book
@@ -35,7 +35,7 @@
       %p
         <a href="#" id="open-book">Back to book →</a>
       %p.license
-        =image_tag "creative-commons.png", {:class => 'creative-commons'}
+        %img.creative-commons{:src => "creative-commons.png"}
         All content under the Creative Commons Attribution Non Commercial Share Alike 3.0 license.
     %div#flippy-book
       %div#book-cover.open
@@ -44,29 +44,21 @@
         %div#book-cover-inside.face
           %span.header Pro Git
           %ol.book-toc
-            %li.chapter
-              %h2 1. <a href="#">Getting Started</a>
-            %li.chapter
-              %h2 2. <a href="#">Git Basics</a>
-            %li.chapter
-              %h2 3. <a href="#">Git Branching</a>
-            %li.chapter
-              %h2 4. <a href="#">Git on the Server</a>
-            %li.chapter
-              %h2 5. <a href="#">Distributed Git</a>
+            - @book.chapters.where("number < 6").each do |chapter|
+              %li.chapter
+                %h2
+                  = chapter.number.to_s + '.'
+                  %a{:href=>"/book/#{@book.code}/#{chapter.sections.first.slug}"}= chapter.title
           <a href="#" id="about-book">About this book</a>
 
       %div#book-inside-page
         %span.header Scott Chacon
         %ol.book-toc
-          %li.chapter
-            %h2 6. <a href="#">Git Tools</a>
-          %li.chapter
-            %h2 7. <a href="#">Customizing Git</a>
-          %li.chapter
-            %h2 8. <a href="#">Git and Other Systems</a>
-          %li.chapter
-            %h2 9. <a href="#">Git Internals</a>
+          - @book.chapters.where("number >= 6").each do |chapter|
+            %li.chapter
+              %h2
+                = chapter.number.to_s + '.'
+                %a{:href=>"/book/#{@book.code}/#{chapter.sections.first.slug}"}= chapter.title
           %li.chapter
             %h2 <a href="#">Index of Commands</a>
 
