full search results page hooked up

--- a/app/views/shared/_search.html.haml
+++ b/app/views/shared/_search.html.haml
@@ -5,7 +5,7 @@
     %td.matches
       %ul
         %li
-          <a href="/search/results">Show all results...</a>
+          %a{:href=>"/search/results?search=#{@term}"} Show all results...
   - @data[:results].each do |cat|
     %tr
       %td.category
