--- a/app/views/layouts/layout.html.haml
+++ b/app/views/layouts/layout.html.haml
@@ -1,7 +1,10 @@
 !!! 5
 %html{:lang => "en"}
   %head
-    %title Git
+    - if @page_title
+      %title= @page_title
+    - else
+      %title Git
     %meta{:charset => "utf-8"}    
     %meta{:content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"}
     = stylesheet_link_tag "git-scm.css" 
