add related material sidebar - local fill only

--- a/app/views/doc/_translations.html.erb
+++ b/app/views/doc/_translations.html.erb
@@ -19,3 +19,5 @@ Partial translations available in
   <a href="/book/pl">Polish</a> and
   <a href="/book/th">Thai</a>
 </p>
+
+<hr class="sidebar"/>
