--- a/app/views/doc/book_section.html.erb
+++ b/app/views/doc/book_section.html.erb
@@ -3,6 +3,7 @@
 
 <% content_for :sidebar do %>
   <%= render 'translations' %>
+  <%= render 'shared/related' %>
 <% end %>
 
 <div id='main' class="book">
