--- a/app/views/doc/man.html.erb
+++ b/app/views/doc/man.html.erb
@@ -1,6 +1,10 @@
 <% @section    = 'documentation' %>
 <% @subsection = 'reference' %>
 
+<% content_for :sidebar do %>
+  <%= render 'shared/related' %>
+<% end %>
+
 <div id='reference-version'>
   <%= render 'doc/topics' %>
   <%= render 'doc/versions' %>
