initial version of commands index using the related data

--- a/app/views/doc/book.html.erb
+++ b/app/views/doc/book.html.erb
@@ -27,11 +27,9 @@
       </ol>
     </li>
   <% end %>
-  <!--
-    <li class='chapter'>
-      <h2><a href="#">Index of Commands</a></h2>
-    </li>
-  -->
+  <li class='chapter'>
+    <h2><a href="/book/commands">Index of Commands</a></h2>
+  </li>
   </ol>
 </div>
 
