--- a/app/views/doc/index.html.haml
+++ b/app/views/doc/index.html.haml
@@ -60,7 +60,7 @@
                 = chapter.number.to_s + '.'
                 %a{:href=>"/book/#{@book.code}/#{chapter.sections.first.slug}"}= chapter.title
           %li.chapter
-            %h2 <a href="#">Index of Commands</a>
+            %h2 <a href="/book/commands">Index of Commands</a>
 
   %h2 Videos
 
