better styling and layout for command index

--- a/app/assets/stylesheets/book.css.scss
+++ b/app/assets/stylesheets/book.css.scss
@@ -131,3 +131,14 @@ ol.book-toc {
 .book pre code {
   display: block;
 }
+
+.book table.commands {
+  font-size: 1.2em;
+}
+.book table.commands tr td {
+  padding: 2px;
+}
+.book table.commands tr td small {
+  color: #777;
+  font-size: 0.8em;
+}
