--- a/app/views/layouts/layout.html.haml
+++ b/app/views/layouts/layout.html.haml
@@ -26,7 +26,7 @@
             Git is a <a href="/about/free-and-open-sourced">free and open source</a> distributed version control system designed to handle everything from small to very large projects with speed and efficiency.
 
           %p
-            Git is <a href="/documentation">easy to learn</a> and has a <a href="/about/small-and-fast">tiny footprint with lightening fast performance</a>. It outclasses SCM tools like Subversion, CVS, Perforce, and Team Foundation Server with features like <a href="/about/branching-and-merging">cheap local branching</a>, convenient <a href="/about/staging-area">staging areas</a>, and <a href="/about/multiple-workflows">multiple workflows</a>.
+            Git is <a href="/documentation">easy to learn</a> and has a <a href="/about/small-and-fast">tiny footprint with lightening fast performance</a>. It outclasses SCM tools like Subversion, CVS, Perforce, and ClearCase with features like <a href="/about/branching-and-merging">cheap local branching</a>, convenient <a href="/about/staging-area">staging areas</a>, and <a href="/about/multiple-workflows">multiple workflows</a>.
 
           <img class="illustration" src="images/branching-illustration.png" />
 
