do not wrap text if font falls back

--- a/app/views/site/index.html.haml
+++ b/app/views/site/index.html.haml
@@ -42,11 +42,11 @@
 
     %table
       %tr
-        %td= link_to "Mac GUI Clients", "/download/gui/mac", {:class => 'icon gui', :id => 'gui-link'}
-        %td= link_to "Older Releases", "/downloads/installers", {:class => 'icon older-releases'}
+        %td{:nowrap => true}= link_to "Mac GUIs", "/download/gui/mac", {:class => 'icon gui', :id => 'gui-link'}
+        %td{:nowrap => true}= link_to "Older Releases", "/downloads/installers", {:class => 'icon older-releases'}
       %tr
-        %td= link_to "Windows Build", "/download/win", {:class => 'icon windows', :id => 'alt-link'}
-        %td= link_to "Source Code", "https://github.com/git/git", {:class => 'icon source'}
+        %td{:nowrap => true}= link_to "Windows Build", "/download/win", {:class => 'icon windows', :id => 'alt-link'}
+        %td{:nowrap => true}= link_to "Source Code", "https://github.com/git/git", {:class => 'icon source'}
 
 
 %section#companies-projects
