started content refresh on about section

--- a/app/views/about/index.html.haml
+++ b/app/views/about/index.html.haml
@@ -17,11 +17,11 @@
     %li
       <a href="#" class="one-line" id="nav-distributed" data-section-id="distributed">Distributed</a>
     %li
-      <a href="#" class="two-line" id="nav-multiple-workflows" data-section-id="multiple-workflows">Multiple Workflows</a>
+      <a href="#" class="two-line" id="nav-info-assurance" data-section-id="info-assurance">Information Assurance</a>
     %li
       <a href="#" class="two-line" id="nav-staging-area" data-section-id="staging-area">Staging Area</a>
     %li
-      <a href="#" class="three-line" id="nav-free-and-open-sourced" data-section-id="free-and-open-sourced">Free and Open Sourced</a>
+      <a href="#" class="three-line" id="nav-free-and-open-source" data-section-id="free-and-open-source">Free and Open Source</a>
 
   %section.about#branching-and-merging.current
     %h2 Branching and Merging
@@ -29,14 +29,12 @@
     %p
       Probably Git's most compelling feature that really makes it stand
       apart from nearly every other SCM out there is its branching
-      model.  It is completely different from all of the models I'm 
-      comparing it to here, most of which recommend that the best branch
-      is basically a clone of the repository in a new directory.
+      model.
 
     %p
-      Git does not work like that.  Git will allow you to have multiple
-      local branches that can be entirely independent of each other and
-      the creation, merging and deletion of those lines of development
+      Git allows and encourages you to have multiple
+      local branches that can be entirely independent of each other.
+      The creation, merging and deletion of those lines of development
       take seconds.
 
     %p
@@ -44,15 +42,15 @@
 
     %ul.bullets
       %li
-        Create a branch to try out an idea, commit a few times, switch back to where you branched from, apply a patch, switch back to where you are experimenting, then merge it in.
+        <strong>Frictionless Context Switching</strong>. Create a branch to try out an idea, commit a few times, switch back to where you branched from, apply a patch, switch back to where you are experimenting, then merge it in.
       %li
-        Have a branch that always contains only what goes to production, another that you merge work into for testing and several smaller ones for day to day work
+        <strong>Role-Based Codelines</strong>. Have a branch that always contains only what goes to production, another that you merge work into for testing and several smaller ones for day to day work
       %li
-        Create new branches for each new feature you're working on, so you can seamlessly switch back and forth between them, then delete each branch when that feature gets merged into your main line.
+        <strong>Feature Based Workflow</strong>. Create new branches for each new feature you're working on, so you can seamlessly switch back and forth between them, then delete each branch when that feature gets merged into your main line.
       %li
-        Create a branch to experiment in, realize it's not going to work and just delete it, abandoning the work—with nobody else ever seeing it (even if you've pushed other branches in the meantime)
+        <strong>Disposable Experimentation</strong>. Create a branch to experiment in, realize it's not going to work and just delete it, abandoning the work—with nobody else ever seeing it (even if you've pushed other branches in the meantime)
 
-    %p
+    %p.center
       <img src="/images/about/branches.png" alt="Branches" />
 
     %p
@@ -69,130 +67,12 @@
     %h2 Small and Fast
 
     %p
-      Git is fast. Everyone—even most of the hard core users of these other systems—generally give Git this title. With Git, all operations are performed locally giving it a bit of a leg up on SVN and Perforce, both of which require network access for certain operations. However, even compared to the other DSCMs that also perform operations locally, Git is pretty fast.
+      <strong>Git is fast</strong>. With Git, nearly all operations are performed locally giving it a huge speed advantage on centralized systems that constantly have to communicate with a server somewhere.
 
     %p
-      Part of this is likely because it was built to work on the Linux kernel, which means that it has had to deal effectively with large repositories from day one. Additionally, Git is written in C, reducing the overhead of runtimes associated with higher-level languages. Another reason that Git is so fast is that the primary developers have made this a design goal of the application.
+      It was also built to work on the Linux kernel, which means that it has had to deal effectively with large repositories from day one. Git is written in C, reducing the overhead of runtimes associated with higher-level languages. Speed and performance has been a primary design goal of the Git from the start.
 
-    %p
-      The following are a number of benchmarks that I performed on three copies of the Django source code repository in 3 different SCMs: Git, Mercurial and Bazaar. I also tested some of this stuff in SVN, but trust me, it's slower—basically take the Bazaar numbers and then add network latency...
 
-    <table>  
-    <tr><td class="nowrap">
-    <img src="http://chart.apis.google.com/chart?cht=bvs&amp;chs=100x125&amp;chd=t:2,5,60&amp;chds=0,60&amp;chxt=x&amp;chco=009099&amp;chl=git|hg|bzr&amp;chf=bg,s,fcfcfa&amp;chtt=Init" alt="init benchmarks" />
-
-    <img src="http://chart.apis.google.com/chart?cht=bvs&amp;chs=100x125&amp;chd=t:85,3,23&amp;chds=0,100&amp;chxt=x&amp;chco=009099&amp;chl=git|hg|bzr&amp;chf=bg,s,fcfcfa&amp;chtt=Add" alt="add benchmarks" />
-
-    <img src="http://chart.apis.google.com/chart?cht=bvs&amp;chs=100x125&amp;chd=t:45,194,1474&amp;chds=0,1474&amp;chxt=x&amp;chco=009099&amp;chl=git|hg|bzr&amp;chf=bg,s,fcfcfa&amp;chtt=Status" alt="status benchmarks" />
-
-    <img src="http://chart.apis.google.com/chart?cht=bvs&amp;chs=100x125&amp;chd=t:5,21,142&amp;chds=0,142&amp;chxt=x&amp;chco=009099&amp;chl=git|hg|bzr&amp;chf=bg,s,fcfcfa&amp;chtt=Diff" alt="diff benchmarks" />
-    </td><td rowspan="2">
-    <img src="http://chart.apis.google.com/chart?cht=bvg&amp;chs=190x275&amp;chd=t:1,123,390|11,946,820&amp;chds=0,1210&amp;chxt=x&amp;chco=009099,7fc7cc&amp;chl=git|hg|bzr&amp;chf=bg,s,fcfcfa&amp;chtt=Branching" alt="branching benchmarks" />
-    </td></tr>
-    <tr><td class="nowrap">
-    <img src="http://chart.apis.google.com/chart?cht=bvs&amp;chs=100x125&amp;chd=t:5,120,189&amp;chds=0,230&amp;chxt=x&amp;chco=009099&amp;chl=git|hg|bzr&amp;chf=bg,s,fcfcfa&amp;chtt=Tag" alt="tag benchmarks" />
-
-    <img src="http://chart.apis.google.com/chart?cht=bvs&amp;chs=100x125&amp;chd=t:7,26,90&amp;chds=0,90&amp;chxt=x&amp;chco=009099&amp;chl=git|hg|bzr&amp;chf=bg,s,fcfcfa&amp;chtt=Log" alt="log benchmarks" />
-
-    <img src="http://chart.apis.google.com/chart?cht=bvs&amp;chs=100x125&amp;chd=t:124,125,230&amp;chds=0,230&amp;chxt=x&amp;chco=009099&amp;chl=git|hg|bzr&amp;chf=bg,s,fcfcfa&amp;chtt=Commit+(Lg)" alt="large commit benchmarks" />
-
-    <img src="http://chart.apis.google.com/chart?cht=bvs&amp;chs=100x125&amp;chd=t:8,51,113&amp;chds=0,113&amp;chxt=x&amp;chco=009099&amp;chl=git|hg|bzr&amp;chf=bg,s,fcfcfa&amp;chtt=Commit+(Sm)" alt="small commit benchmarks" />
-    </td></tr>
-    </table>
-
-    %p
-      The end result was that for everything but adding new files, Git was fastest. (Also really large commits, which Hg was basically the same at, but the commit I tested was so large that you're unlikely to ever do anything like it—normal commits are much faster in Git.)
-
-    <table width="100%" class="data">
-    <tr>
-    <th></th>
-    <th>Git</th>
-    <th>Hg</th>
-    <th>Bzr</th>
-    </tr>
-    <tr>
-    <th>Init</th>
-    <td class="sweet">0.024s</td>
-    <td>0.059s</td>
-    <td>0.600s</td>
-    </tr>
-    <tr>
-    <th>Add</th>
-    <td>8.535s</td>
-    <td class="sweet">0.368s</td>
-    <td>2.381s</td>
-    </tr>
-    <tr>
-    <th>Status</th>
-    <td class="sweet">0.451s</td>
-    <td>1.946s</td>
-    <td>14.744s</td>
-    </tr>
-    <tr>
-    <th>Diff</th>
-    <td class="sweet">0.543s</td>
-    <td>2.189s</td>
-    <td>14.248s</td>
-    </tr>
-    <tr>
-    <th>Tag</th>
-    <td class="sweet">0.056s</td>
-    <td>1.201s</td>
-    <td>1.892s</td>
-    </tr>
-    <tr>
-    <th>Log</th>
-    <td class="sweet">0.711s</td>
-    <td>2.650s</td>
-    <td>9.055s</td>
-    </tr>
-    <tr>
-    <th>Commit (Large)</th>
-    <td class="sweet">12.480s</td>
-    <td>12.500s</td>
-    <td>23.002s</td>
-    </tr>
-    <tr>
-    <th>Commit (Small)</th>
-    <td class="sweet">0.086s</td>
-    <td>0.517s</td>
-    <td>1.139s</td>
-    </tr>
-    <tr>
-    <th>Branch (Cold)</th>
-    <td class="sweet">1.161s</td>
-    <td>94.681s</td>
-    <td>82.249s</td>
-    </tr>
-    <tr>
-    <th>Branch (Hot)</th>
-    <td class="sweet">0.070s</td>
-    <td>12.300s</td>
-    <td>39.411s</td>
-    </tr>
-    </table>
-
-    %p
-      The cold and hot branching numbers are the numbers for the first and second times that I branched a repo—the second number being a branch with a hot disk cache.
-
-    %p
-      It should be noted that although the 'add' numbers are much slower, this was for a massive add operation—over 2000 files. For the majority of what most people do on a daily basis, add ops in any of these systems will only take a fraction of a second. All of the other ops tested here (except for the large commit, possibly) are more indicative of things you might actually do day to day.
-    
-    %p
-      These numbers are really not difficult to recreate, simply clone the Django project in each of the systems and try out the same commands in each.
-            
-
-    %code
-      git clone git://github.com/brosner/django.git dj-git
-
-    %code
-      hg clone http://hg.dpaste.com/django/trunk dj-hg
-
-    %code
-      bzr branch lp:django dj-bzr
-
-    %code
-      svn checkout http://code.djangoproject.com/svn/django/trunk dj-svn
 
     %div.bottom-nav
       =link_to "← Branching and Merging", "#", {:class => 'previous', 'data-section-id' => 'branching-and-merging'}
@@ -204,70 +84,58 @@
     %p
       One of the coolest features of any of the Distributed SCMs, Git included, is that it's distributed. This means that instead of doing a "checkout" of the current tip of the source code, you do a "clone" of the entire repository.
 
+    %h3 Multiple Backups
+
     %p
       This means that even if you're using a centralized workflow, every user has what is essentially a full backup of the main server, each of which could be pushed up to replace the main server in the event of a crash or corruption. There is basically no single point of failure with Git unless there is only a single point.
 
-    %p
-      This does not slow things down much, either. On average, an SVN checkout is only marginally faster than any of the DSCMs. Of the DSCMs I tested, Git was the fastest.
-
-    <table>
-    <tr><td>
-    <img src="http://chart.apis.google.com/chart?cht=bvs&amp;chs=200x150&amp;chd=t:120,144,311,64&amp;chds=0,320&amp;chco=009099&amp;chl=git|hg|bzr|svn&amp;chf=bg,s,fcfcfa&amp;chtt=Clone" alt="cloning benchmarks" />
-    </td><td style="width: 80%">
-    <table width="100%" class="data">
-    <tr>
-    <th>Git</th>
-    <td class="sweet">1m 59s</td>
-    </tr>
-    <tr>
-    <th>Hg</th>
-    <td>2m 24s</td>
-    </tr>
-    <tr>
-    <th>Bzr</th>
-    <td>5m 11s</td>
-    </tr>
-    <tr>
-    <th>SVN</th>
-    <td>1m 4s</td>
-    </tr>
-    </table>
-    </td></tr>
-    </table>
-
-    %div.bottom-nav
-      =link_to "← Small and Fast", "#", {:class => 'previous', 'data-section-id' => 'small-and-fast'}
-      =link_to "Multiple Workflows →", "#", {:class => 'next', 'data-section-id' => 'multiple-workflows'}
-
-  %section.about#multiple-workflows
-    %h2 Multiple Workflows
+    %h3 Any Workflow
 
     %p
       One of the amazing things about Git is that because of its distributed nature and super branching system, you can easily implement pretty much any workflow you can think of relatively easily.
 
-    %h3 Subversion-Style Workflow
+    %h4 Subversion-Style Workflow
 
     %p
       A very common Git workflow, especially from people transitioning from a centralized system, is a centralized workflow. Git will not allow you to push if someone has pushed since the last time you fetched, so a centralized model where all developers push to the same server works just fine.
 
-    %p
+    %p.center
       <img src="/images/about/workflow-a.png" alt="Workflow A" />
 
-    %h3 Integration Manager Workflow
+    %h4 Integration Manager Workflow
 
     %p
       Another common Git workflow is where there is an integration manager—a single person who commits to the 'blessed' repository, and then a number of developers who clone from that repository, push to their own independent repositories and ask the integrator to pull in their changes. This is the type of development model you often see with open source or GitHub repositories.
 
-    %p
+    %p.center
       <img src="/images/about/workflow-b.png" alt="Workflow B" />
 
-    %h3 Dictator and Lieutenants Workflow
+    %h4 Dictator and Lieutenants Workflow
 
     %p
       For more massive projects, you can setup your developers similar to the way the Linux kernel is run, where people are in charge of a specific subsystem of the project ('lieutenants') and merge in all changes that have to do with that subsystem. Then another integrator (the 'dictator') can pull changes from only his/her lieutenants and the push to the 'blessed' repository that everyone then clones from again.
 
-    %p
+    %p.center
       <img src="/images/about/workflow-c.png" alt="Workflow C" />
+
+    %div.bottom-nav
+      =link_to "← Small and Fast", "#", {:class => 'previous', 'data-section-id' => 'small-and-fast'}
+      =link_to "Information Assurance →", "#", {:class => 'next', 'data-section-id' => 'info-assurance'}
+
+  %section.about#info-assurance
+    %h2 Information Assurance
+
+    %p
+      The data model that Git uses ensures cryptographic integrity of every bit
+      of your project.  It's impossible to get out of Git anything other than
+      the <strong>exact bits you put in</strong>.
+
+    %p
+      It is also impossible to change any file, date, commit message or any other
+      data in a Git repository without changing the IDs of everything after it.
+      This means that if you have a commit ID you can not only be assured that
+      your project is exactly the same as when it was committed, but you can also
+      be assured that nothing in it's history was changed.
 
     %div.bottom-nav
       =link_to "← Distributed", "#", {:class => 'previous', 'data-section-id' => 'distributed'}
@@ -282,7 +150,7 @@
     %p
       The cool thing about the staging area, and what sets Git apart from all these other tools, is that you can easily stage some of your files as you finish them and then commit them without committing all the modified files in your working directory, or having to list them on the command line during the commit
 
-    %p
+    %p.center
       <img src="/images/about/index1.png" alt="Index 1" />
 
     %p
@@ -291,32 +159,37 @@
     %p
       Of course, Git also makes it pretty easy to ignore this feature if you don't want that kind of control—just slap a '-a' to your commit command in order to add all changes to all files to the staging area.
 
-    %p
+    %p.center
       <img src="/images/about/index2.png" alt="Index 2" />
 
     %div.bottom-nav
-      =link_to "← Multiple Workflows", "#", {:class => 'previous', 'data-section-id' => 'multiple-workflows'}
-      =link_to "Free and Open Sourced →", "#", {:class => 'next', 'data-section-id' => 'free-and-open-sourced'}
+      =link_to "← Information Assurance", "#", {:class => 'previous', 'data-section-id' => 'info-assurance'}
+      =link_to "Free and Open Source →", "#", {:class => 'next', 'data-section-id' => 'free-and-open-source'}
 
 
-  %section.about#free-and-open-sourced
-    %h2 Free and Open Sourced
-
-    %p
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  %section.about#free-and-open-source
+    %h2 Free and Open Source
 
     %p
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      Git is released under the <a href="https://github.com/git/git/blob/master/COPYING">GPLv2</a> <a href="http://www.opensource.org/docs/osd">open source license</a>.  This means that you are free to <a href="https://github.com/git/git">inspect the source code</a> at any time or <a href="https://github.com/git/git/blob/master/Documentation/SubmittingPatches">contribute</a> to the project yourself.
+
+    %p
+      Under Git's GPLv2 software license, you <strong>may</strong>:
+
+      %ul.bullets
+        %li Use Git on open or proprietary projects for free, forever
+        %li Download, inspect and modify the source code to Git
+        %li Make proprietary changes to Git that you do not redistribute publicly
+        %li Call Git binaries from your open or proprietary programs
+        %li Publicly redistribute Git binaries with open or proprietary programs, given that they are unmodified or the modifications are public
+
+    %p
+      Under this license you <strong>may not</strong>:
+
+      %ul.bullets
+        %li Make proprietary changes to Git and publicly redistribute it without sharing the changes
+        %li Make and publicly distribute changes to Git under a different license
+        %li Use source code from the Git repository in a different project without permission
 
     %div.bottom-nav
       =link_to "← Staging Area", "#", {:class => 'previous', 'data-section-id' => 'staging-area'}
