add benchmarks placeholder

--- a/app/views/about/index.html.haml
+++ b/app/views/about/index.html.haml
@@ -72,6 +72,29 @@
     %p
       It was also built to work on the Linux kernel, which means that it has had to deal effectively with large repositories from day one. Git is written in C, reducing the overhead of runtimes associated with higher-level languages. Speed and performance has been a primary design goal of the Git from the start.
 
+    %h3 Benchmarks
+
+    %p 
+      If you don't believe me, let's see how common operations stack up against
+      Subversion, a common centralized version control system that is similar
+      to CVS or Perforce.
+
+      (Small and large projects for each)
+
+      %ul.bullets
+        %li clone vs checkout
+        %li status
+        %li commit + push vs commit
+        %li local diff
+        %li historical diff
+        %li log
+        %li pull vs update
+        %li branch switching
+        %li branch compare
+        %li merge
+
+
+
 
 
     %div.bottom-nav
