bunch of jasons changes

--- a/app/assets/stylesheets/book.css.scss
+++ b/app/assets/stylesheets/book.css.scss
@@ -44,11 +44,14 @@
   width: 298px;
   height: 398px;
   position: absolute;
+  left: 4px;
   top: 0;
-  right: 6px;    
-  z-index: 50;
   @include transform-style(preserve-3d);
   @include transition-duration(1.2s);
+}
+.webkit #flippy-book #book-cover {
+  left: auto;
+  right: 6px;    
 }
 #flippy-book #book-cover.open {
   @include transform-origin(-1px, 0);
@@ -58,24 +61,38 @@
   @include transform-origin(0, 0);
 }
 #flippy-book #book-cover-outside {
+  display: none;
   width: 298px;
   height: 398px;
   color: black;
   background: #000102 url(/images/pro-git-298x398.jpg) 0 0 no-repeat;
-  z-index: 20;
   text-indent: -9999px;
   cursor: pointer;
+}
+#flippy-book #book-cover.close {
+  display: block;
+  left: auto;
+  right: 6px;
+}
+#flippy-book #book-cover.close #book-cover-outside {
+  display: block;
+}
+.three-dee #flippy-book #book-cover-outside {
+  display: block;
 }
 #flippy-book #book-cover-inside {
   width: 298px;
   height: 398px;    
   right: 4px;
-  @include rotateY(180deg);
-  z-index: 10;
   background: #fff url(/images/bg/flippy-book-inside-cover.png) 0 0 no-repeat;
+}
+.three-dee #flippy-book #book-cover-inside {
+  @include rotateY(180deg);
 }
 #flippy-book .face {
   position: absolute;
+}
+.three-dee #flippy-book .face {
   @include backface-visibility(hidden);
 }
 
@@ -83,7 +100,7 @@
   position: absolute;
   top: 0;
   right: 6px;
-  z-index: 1;
+//  z-index: 1;
   width: 298px;
   height: 398px;
 }
