--- a/app/assets/stylesheets/lists.css.scss
+++ b/app/assets/stylesheets/lists.css.scss
@@ -133,6 +133,54 @@ ol.full-search-results {
   }
 }
 
+#download-next-steps {
+  @include clearfix;
+  @extend .unstyled;
+  padding-top: 24px;
+  li {
+    display: block;
+    width: 200px;
+    float: left;
+    margin-bottom: 20px;
+  }
+  li + li {
+    margin-left: 20px;
+  }
+  a {
+    display: block;
+    color: $font-color;
+    text-align: center;
+    background-position: 0 0;
+    background-repeat: no-repeat;
+    @include transition-property(color);
+    @include transition-duration(.30s);
+    img {
+      display: block;
+      margin: 0 auto 10px auto;
+      opacity: 0.9;
+      @include transition-property(opacity);
+      @include transition-duration(.30s);
+    }
+    h3 {
+      font-size: 18px;
+      font-weight: bold;
+      color: $orange;
+    }
+    p {
+      font-size: 13px;
+      line-height: $base-line-height * 0.8;
+    }
+  }
+  a:hover {
+    img {
+      opacity: 1;
+    }
+    h3 {
+      color: darken($orange, 5%);
+    }
+  }
+}
+
 ul.related-material {
   @extend .unstyled;
   font-size: 12px;
