--- a/app/views/doc/index.html.haml
+++ b/app/views/doc/index.html.haml
@@ -35,7 +35,7 @@
       %p
         <a href="#" id="open-book">Back to book →</a>
       %p.license
-        %img.creative-commons{:src => "creative-commons.png"}
+        %img.creative-commons{:src => "/images/creative-commons.png"}
         All content under the Creative Commons Attribution Non Commercial Share Alike 3.0 license.
     %div#flippy-book
       %div#book-cover.open
