--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -6,6 +6,11 @@ body {
   background: #f0efe7 url(/images/bg/body.jpg);
 }
 
+// windows chrome makes a mess of Adelle web font
+.windows.chrome body * {
+  font-family: $base-font-family-fallback ! important;
+}
+
 // High level structure
 .inner {
   @include clearfix;
@@ -172,6 +177,44 @@ section.about {
 
 p.center {
   text-align: center;
+}
+
+#logo-license {
+  @extend .callout;
+  margin-top: 2em;
+  padding: 20px ! important;
+  p {
+    color: $light-font-color;
+    font-size: 12px;
+    line-height: 1.4;
+  }
+  p + p {
+    margin-top: 14px;
+  }
+  img {
+    float: left;
+    margin-right: 20px;
+  }
+}
+
+.callout.downloading {
+  background: $callout-color url(/images/icons/download.png) 24px 24px no-repeat;
+  padding: 20px 30px 20px 100px !important;
+  h3 {
+    font-size: 18px;
+    color: $orange;
+  }
+  p {
+    font-size: 15px;
+    line-height: 1.3em;
+    margin-bottom: 15px ! important;
+  }
+  p.small {
+    font-size: 12px;
+    color: $light-font-color;
+    line-height: 1.4;
+    margin-bottom: 0 ! important;
+  }
 }
 
 // Dropdowns
