--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -14,6 +14,7 @@ $link-active-color:  false;
 $link-visited-color: false;
 
 $base-font-family: "adelle", Georgia, "Times New Roman", serif;
+$base-font-family-fallback:  Georgia, "Times New Roman", serif;
 $base-font-size:   14px;
 $base-line-height: 22px;
 
