--- a/app/views/downloads/index.html.haml
+++ b/app/views/downloads/index.html.haml
@@ -34,17 +34,18 @@
         %h2 GUI Clients
 
         %p
-          Git comes with built-in GUI tools (<a>git-gui</a>, <a>gitk</a>), but there are several third-party tools for users looking for a platform-specific experience.
+          Git comes with a built-in GUI (<strong>git-gui</strong>, <strong>gitk</strong>), but there are several third-party tools for users looking for platform-specific experience.
 
         %p
           %strong= link_to "View GUI Clients →", "/downloads/guis"
 
-  %h2 Logos
+      %div.column-right
+        %h2 Logos
 
         %p Various Git logos in PNG (bitmap) and EPS (vector) formats are available for use in online and print projects. 
 
         %p
-          %strong= link_to "View Logos →", "/downloads/logos"
+          %strong= link_to "View Logos →", "/downloads/guis"
 
 
   %h2 Git via Git
@@ -56,4 +57,4 @@
     git clone https://github.com/git/git.git
 
   %p
-    %strong= link_to "View Logos →", "/downloads/guis"
+    You can also always browse the current contents of the git repository using the <a href="#">web interface</a>.
