--- a/app/views/downloads/installers/index.html.haml
+++ b/app/views/downloads/installers/index.html.haml
@@ -7,22 +7,12 @@
       The entire <strong><a href="#">Pro Git book</a></strong> written by Scott Chacon is available to <a href="#">read online for free</a>. Dead tree versions are available on <a href="#">Amazon.com</a>.
 
 %div#main
+  %h1 Git Installers
 
   %div.two-column
     %div.column-left
-      %h1 Git Installers
       %div.callout
         %table.binaries
-          %tr
-            %td
-              %strong Mac
-            %td 
-              =link_to "Stable", "https://github.com/timcharper/git_osx_installer/downloads"
-          %tr
-            %td 
-              %strong Windows
-            %td 
-              =link_to "Stable", "http://code.google.com/p/msysgit/downloads/list?can=3"
           %tr
             %td
               %strong Debian
@@ -34,13 +24,29 @@
               =link_to "Unstable", "http://packages.debian.org/unstable/devel/git"
           %tr
             %td 
+              %strong Windows
+            %td 
+              =link_to "Stable", "http://code.google.com/p/msysgit/downloads/list"
+              <span class="light">|</span>
+              =link_to "Cygwin", "http://www.cygwin.com/setup.exe"
+          %tr
+            %td
+              %strong Mac
+            %td 
+              =link_to "Stable", "http://code.google.com/p/git-osx-installer/downloads/list?can=3"
+          %tr
+            %td 
               %strong Solaris
             %td 
+              =link_to "v8-10", "http://sunfreeware.com"
+              <span class="light">|</span>
               =link_to "v9-10", "http://opencsw.org/packages/git/"
 
       %p
-        <a href="http://code.google.com/p/git-core/downloads/list">Older releases</a> are available on Google Code 
-        and a <a href="https://github.com/git/git">Git source repository</a> mirror is on GitHub.
+        <a href="http://code.google.com/p/git-core/downloads/list">Older releases</a> are available and the <a href="https://github.com/gitster/git">Git source repository</a> is on GitHub.
+
+      %p
+        Daily snapshots of the main Git development branch are available at <a href="http://codemonkey.org">codemonkey.org</a>.
 
     %div.column-right
       = partial 'shared/monitor'
@@ -51,7 +57,13 @@
     If you already have Git installed, you can get the latest development version via Git itself:
 
   %code
-    git clone https://github.com/git/git
+    git clone git://github.com/gitster/git.git
 
   %p
-    You can also always browse the current contents of the Git repository using the <a href="https://github.com/git/git">web interface</a>.
+    If you have problems connecting (Git uses port 9418), you can try to access the repository over the HTTP protocol:
+
+  %code
+    git clone https://github.com/gitster/git.git
+
+  %p
+    You can also always browse the current contents of the git repository using either the <a href="#">gitweb or <a href="#">GitHub</a> web interface.
