switch to new downloads page

--- a/app/views/downloads/downloading.html.haml
+++ b/app/views/downloads/downloading.html.haml
@@ -11,15 +11,13 @@
 
   %div.callout.downloading
     %h3 Your download is starting...
+    %iframe{:width => 1, :height => 1, :frameborder => 0, :src => @download.url}
 
-    %p
-      You are downloading version <strong>1.7.9.4</strong> of Git for the <strong>Mac</strong> platform. This is the most recent maintained build for this platform. It was released <strong>about 1 month ago</strong>, on 2012-03-12.
+    %p=raw "You are downloading version <strong>#{@download.version.name}</strong> of Git for the <strong>#{@platform.capitalize}</strong> platform. This is the most recent maintained build for this platform. It was released <strong>#{time_ago_in_words @download.version.committed} ago</strong>, on #{@download.version.committed.strftime("%Y-%m-%d")}."
 
-    %p
-      <strong>If your download hasn't started, <a href="#">click here to download manually</a>.</strong>
+    %p=raw "<strong>If your download hasn't started, <a href=\"#{@download.url}\">click here to download manually</a>.</strong>"
 
-    %p.small
-      The current source code release is version <strong>1.7.10</strong>. If you want the newer version, you can build it from <a href="#">the source code</a>.
+    %p.small=raw "The current source code release is version <strong>#{@latest.name}</strong>. If you want the newer version, you can build it from <a href=\"https://github.com/git/git\">the source code</a>."
 
 
   %h2 Now What?
