change to docs/

--- a/app/views/doc/_versions.html.erb
+++ b/app/views/doc/_versions.html.erb
@@ -6,7 +6,7 @@
     <% @versions.each do |v| %>
       <% if v[:changed] %>
         <li>
-        <a href="/ref/<%= @file.name %>/<%= v[:name] %>"><span class="version"><%= v[:name] %></span>
+        <a href="/docs/<%= @file.name %>/<%= v[:name] %>"><span class="version"><%= v[:name] %></span>
           <span class="diff">
             <% v[:diff][0].times do %>
               <img src="/images/icons/green-dot.png" />
