--- a/app/views/doc/ext.html.erb
+++ b/app/views/doc/ext.html.erb
@@ -15,13 +15,13 @@
           </p>
         </li>
         <li>
-          <h4><a href="/ref/gittutorial">Official Git Tutorial</a></h4>
+          <h4><a href="/docs/gittutorial">Official Git Tutorial</a></h4>
           <p class='description'>
             The official gittutorial man page is a good place to start.
           </p>
         </li>
         <li>
-          <h4><a href="/ref/everyday">Everyday Git</a></h4>
+          <h4><a href="/docs/everyday">Everyday Git</a></h4>
           <p class='description'>
             Learn the basics with 20 of the most common commands.
           </p>
