--- a/app/views/doc/index.html.haml
+++ b/app/views/doc/index.html.haml
@@ -12,7 +12,7 @@
   %h2 Reference
 
   %div.callout.ref-manual
-    %h3= link_to "Reference Manual", "/ref"
+    %h3= link_to "Reference Manual", "/docs"
     %p
       The official and comprehensive <strong>man pages</strong> that are included in the Git package itself.
 
