--- a/app/views/shared/_related.html.erb
+++ b/app/views/shared/_related.html.erb
@@ -5,7 +5,7 @@
       <li class="<%= rel.content_type %>">
       <strong><a href="<%= rel.content_url %>"><%= rel.name %></a></strong>
       <% if rel.content_type == "reference" %>
-        in <a href="/ref">Reference</a>
+        in <a href="/docs">Reference</a>
       <% elsif rel.content_type == "book" %>
         in <a href="/book/en">Books</a>
       <% elsif rel.content_type == "video" %>
