--- a/app/views/downloads/guis/index.html.haml
+++ b/app/views/downloads/guis/index.html.haml
@@ -4,13 +4,13 @@
 - content_for :sidebar do
   %div.callout
     %p
-      The entire <strong><a href="#">Pro Git book</a></strong> written by Scott Chacon is available to <a href="#">read online for free</a>. Dead tree versions are available on <a href="#">Amazon.com</a>.
+      The entire <strong><a href="/book">Pro Git book</a></strong> written by Scott Chacon is available to <a href="/book">read online for free</a>. Dead tree versions are available on <a href="#">Amazon.com</a>.
 
 %div#main
   %h1 GUI Clients
 
   %p
-    Git comes with built-in GUI tools for committing (<a href="/ref/git-gui">git-gui</a>) and browsing (<a href="/ref/gitk">gitk</a>), but there are several third-party tools for users looking for platform-specific experience.
+    Git comes with built-in GUI tools for committing (<a href="/docs/git-gui">git-gui</a>) and browsing (<a href="/docs/gitk">gitk</a>), but there are several third-party tools for users looking for platform-specific experience.
 
   %p
     =link_to "Only show GUIs for my OS (Windows)", "#", {:class => "subtle-button", :id => "gui-os-filter", 'data-os' => 'windows'}
