first graphs and new services

--- a/app/views/about/index.html.haml
+++ b/app/views/about/index.html.haml
@@ -77,21 +77,29 @@
     %p 
       If you don't believe me, let's see how common operations stack up against
       Subversion, a common centralized version control system that is similar
-      to CVS or Perforce.
+      to CVS or Perforce. <em>Smaller is faster</em>
 
-      (Small and large projects for each)
+    %table{:width => '100%'}
+      %tr
+        %td
+          =raw gchart("Commit", [['git', 0.649], ['svn', 2.6]])
+          =raw gchart("Commit", [['git', 1.53], ['svn', 24.7]])
+          =raw gchart("Diff Curr", [['git', 0.257], ['svn', 1.09]])
+          =raw gchart("Diff Rec", [['git', 0.248], ['svn', 3.99]])
+          =raw gchart("Diff First", [['git', 1.71], ['svn', 6.57]])
+          =raw gchart("Diff Tags", [['git', 1.17], ['svn', 83.57]])
+          =raw gchart("Log (50)", [['git', 0.012], ['svn', 0.381]])
+          =raw gchart("Log (All)", [['git', 0.519], ['svn', 169.197]])
+          =raw gchart("Log (File)", [['git', 0.601], ['svn', 82.843]])
+          =raw gchart("Update", [['git', 0.896], ['svn', 2.816]])
+          =raw gchart("Blame", [['git', 1.91], ['svn', 3.04]])
 
-      %ul.bullets
-        %li clone vs checkout
-        %li status
-        %li commit + push vs commit
-        %li local diff
-        %li historical diff
-        %li log
-        %li pull vs update
-        %li branch switching
-        %li branch compare
-        %li merge
+    %table{:width => '100%'}
+      %tr
+        %td
+          =raw gchart("Clone", [['svn', 14.0], ['git*', 21.0], ['git', 107.5]])
+          =raw gchart("Size", [['svn', 132], ['git', 181]])
+
 
 
 
