copy in jasons changes

--- a/app/assets/stylesheets/git-scm.css.scss
+++ b/app/assets/stylesheets/git-scm.css.scss
@@ -4,6 +4,8 @@
 @import "variables.css.scss";
 @import "typography.css.scss";
 @import "layout.css.scss";
+@import "downloads.css.scss";
+@import "search.css.scss";
 @import "front-page.css.scss";
 @import "sidebar.css.scss";
 @import "reference.css.scss";
