--- a/app/assets/stylesheets/reference.css.scss
+++ b/app/assets/stylesheets/reference.css.scss
@@ -65,13 +65,22 @@
   font-weight: normal;
   line-height: 1;
   ul {
-    margin-bottom: 0;
+    margin-bottom: 10px;
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
   li {
     line-height: $base-line-height * .8;
+    padding-left: 23px;
   }
   h3 {
     font-size: 13px;
+    min-height: 20px;
+    padding-top: 4px;
+    margin-bottom: 8px;
+    line-height: 15px;
+    padding-left: 23px;
   }
   a {
     font-weight: normal;
