--- a/app/assets/stylesheets/typography.css.scss
+++ b/app/assets/stylesheets/typography.css.scss
@@ -52,6 +52,9 @@ h2 {
     font-size: 18px;
   }
 }
+.callout h2:first-child {
+    margin-top: 0;
+}
 h3 {
   line-height: $base-line-height * 1.5;
   font-size: 16px;
@@ -59,6 +62,45 @@ h3 {
   small {
     font-size: 14px;
   }
+}
+h3.setup {
+  background: transparent url(/images/icons/setup-sm.png) 0 2px no-repeat;
+}
+h3.projects {
+  background: transparent url(/images/icons/projects-sm.png) 0 7px no-repeat;
+}
+h3.snapshotting {
+  background: transparent url(/images/icons/camera-sm.png) 0 4px no-repeat;
+}
+h3.branching {
+  background: transparent url(/images/icons/branch-sm.png) 4px 2px no-repeat;
+}
+h3.sharing {
+  background: transparent url(/images/icons/sharing-sm.png) 2px 4px no-repeat;
+}
+h3.inspection {
+  background: transparent url(/images/icons/inspection-sm.png) 1px 2px no-repeat;
+}
+h3.patching {
+  background: transparent url(/images/icons/patching-sm.png) 1px 4px no-repeat;
+}
+h3.debugging {
+  background: transparent url(/images/icons/debugging-sm.png) 1px 3px no-repeat;
+}
+h3.email {
+  background: transparent url(/images/icons/email-sm.png) 0px 3px no-repeat;
+}
+h3.external {
+  background: transparent url(/images/icons/external-sm.png) 0px 2px no-repeat;
+}
+h3.admin {
+  background: transparent url(/images/icons/admin-sm.png) 2px 2px no-repeat;
+}
+h3.server-admin {
+  background: transparent url(/images/icons/server-admin-sm.png) 2px 2px no-repeat;
+}
+h3.plumbing {
+  background: transparent url(/images/icons/plumbing-sm.png) 2px 2px no-repeat;
 }
 h4, h5, h6 {
   line-height: $base-line-height;
